Data race in WiredTigerRecordStore::getEarliestOplogTimestamp

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2023-04-03
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Due to this call, we can race between truncating the oplog and getting it's earliest timestamp. We could also race between multiple threads calling getEarliestOplogTimestamp at the same time.

            Assignee:
            Jordi Olivares Provencio
            Reporter:
            Pavithra Vetriselvan
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: