SERVER-75259 Fix race condition during earliest oplog timestamp initialisation